--- a/src/index.html
+++ b/src/index.html
@@ -11,3 +11,11 @@
   <app-root></app-root>
 </body>
 </html>
+<style>
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+  }
+</style>
